/*
  ~ Copyright 2016 Claymore Minds Limited and Niche Solutions (UK) Limited
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
*/

option java_package = "io.viewserver.messages.protobuf.dto";
option java_outer_classname = "UpdateSubscriptionCommandMessage";

import "core/CommandDto.proto";
import "core/OptionsDto.proto";

message UpdateSubscriptionCommandDto {
    required uint32 commandId = 1;
    required OptionsDto options = 2;
}

extend CommandDto {
    optional UpdateSubscriptionCommandDto updateSubscriptionCommand = 203;
}